crates/fossil-codegen/tests/snapshots/r10_groupby_fusion.snap
---
source: crates/fossil-codegen/tests/corpus.rs
expression: sql_for(idx)
---
CREATE VIEW users AS
SELECT * FROM read_csv_auto('examples/users.csv', sample_size=-1);
COPY (
    SELECT
        step_1.iri AS subject,
        'https://example.org/name' AS predicate,
        step_2.name AS object
    FROM (SELECT country, city FROM (users) GROUP BY country, city) AS step_1
) TO 'output.parquet' (FORMAT PARQUET);
