crates/fossil-codegen/tests/snapshots/r3_project_pushdown.snap
---
source: crates/fossil-codegen/tests/corpus.rs
expression: sql_for(idx)
---
CREATE VIEW users AS
SELECT * FROM read_csv_auto('examples/users.csv', sample_size=-1);
COPY (
    SELECT
        step_2.iri AS subject,
        'https://example.org/name' AS predicate,
        step_2.name AS object
    FROM (SELECT * FROM (SELECT id, name FROM users) AS step_1 WHERE users.id = '1') AS step_2
) TO 'output.parquet' (FORMAT PARQUET);
