crates/fossil-codegen/tests/snapshots/r5_filter_join.snap
---
source: crates/fossil-codegen/tests/corpus.rs
expression: sql_for(idx)
---
CREATE VIEW orders AS
SELECT * FROM read_csv_auto('examples/orders.csv', sample_size=-1);
CREATE VIEW users AS
SELECT * FROM read_csv_auto('examples/users.csv', sample_size=-1);
COPY (
    SELECT
        step_2.iri AS subject,
        'https://example.org/name' AS predicate,
        step_3.name AS object
    FROM (SELECT orders.*, users.* FROM (source) AS orders INNER JOIN (users) AS users ON orders.user_id = users.id) AS step_2
) TO 'output.parquet' (FORMAT PARQUET);
