crates/fossil-codegen/tests/snapshots/r6_rename_expansion.snap
---
source: crates/fossil-codegen/tests/corpus.rs
expression: sql_for(idx)
---
CREATE VIEW users AS
SELECT * FROM read_csv_auto('examples/users.csv', sample_size=-1);
COPY (
    SELECT
        source.iri AS subject,
        'https://example.org/name' AS predicate,
        step_1.name AS object
    FROM source
) TO 'output.parquet' (FORMAT PARQUET);
