crates/fossil-codegen/tests/snapshots/r7_const_fold_extend.snap
---
source: crates/fossil-codegen/tests/corpus.rs
expression: sql_for(idx)
---
CREATE VIEW users AS
SELECT * FROM read_csv_auto('examples/users.csv', sample_size=-1);
COPY (
    SELECT
        'https://example.org/user' AS subject,
        'https://example.org/name' AS predicate,
        users.name AS object
    FROM users
) TO 'output.parquet' (FORMAT PARQUET);
